<resources>
    <!-- NOT translatable fields -->
    <string name="app_name" translatable="false">classes</string>
    <string name="text_1" translatable="false">FIRST</string>
    <string name="text_2" translatable="false">SECOND</string>
    <string name="change_button" translatable="false">CHANGE PLACES</string>
    <string name="loren_ipsum" translatable="false">Lorem ipsum dolor sit amet, suspendisse in sociis mi mi sit mauris,
        purus ultrices lorem non gravida, risus faucibus praesent id turpis malesuada euismod. Eget ad sed non blandit
        aliquam convallis.
    </string>
    <string name="enter_uri" translatable="false">http://example.com/img.jpg</string>

    <!-- Translatable fields -->

    <string name="first_homework">Implement click listeners with 3 approaches to change text fields colors and text
        content.
    </string>
    <string name="second_homework">Create activity with flags. Flags should be drawn with layouts but not pictures.
        Flags should be relative one to each other.
    </string>
    <string name="third_homework">Show remote image task. Progress bar should appear while picture wile picture
        preparing.
    </string>
    <string name="four_homework">1. Create animation between activities 2. Make owl to blink (animation) 3. Draw watches
        with correct time
    </string>
    <string name="five_homework">1. Create service with WIFI state check 2.Send from service to activity WIFI state with
        LocalBroadcastManager
    </string>
    <string name="hw5_wifi_state">
        Actual WIFI State (is enabled):
    </string>
    <string name="six_homework">Create activity with RecyclerView. Activity should provide edit functionality.</string>
    <string name="seven_homework">Create activity with RecyclerView. Fragments should contain edit-add functionality.</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="degree">Has degree:</string>
    <string name="alreadyRemoved">This studen had been removed already!</string>

    <string name="first_homework_unavailable">Unfortunately this homework was moved to different source :(</string>
    <string name="under_construction">Unfortunately this is under construction :(</string>

    <string name="error_invalid_url">URL you\'ve entered is incorrect</string>
    <string name="random_picture_selected">RANDOM PICTURE</string>

    <string name="button_back_button">GET BACK</string>
    <string name="button_show_image">SHOW IMAGE</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_upload">UPLOAD</string>
    <string name="button_add">ADD</string>
    <string name="button_edit">EDIT</string>
    <string name="button_delete">DELETE</string>
    <string name="button_remove">REMOVE</string>
    <string name="button_save">SAVE</string>
    <string name="button_upload_default_picture">
        <u>If you don\'t want to type image address, we can render rnadom image for you!</u>
    </string>

    <string name="navigation_owl">Owl</string>
    <string name="navigation_clock">Clock</string>

    <string name="success_action">SUCCESS</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">
        <u>Forgot your username/password?</u>
    </string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="eleven">Eleven</string>

</resources>
