<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homework.hw6.Hw6EditActivity"
        android:padding="@dimen/dimen_9dp">

    <ImageView
            android:id="@+id/studentImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/icon_test"/>

    <EditText
            android:id="@+id/studentNameView"
            android:layout_marginTop="@dimen/text_size_28_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/studentImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/studentSurnameView"
            android:layout_marginTop="@dimen/dimen_9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentNameView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/studentAgeView"
            android:layout_marginTop="@dimen/dimen_9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentSurnameView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentAgeView">
        <TextView
                android:id="@+id/studentDegreeTextView"
                android:layout_marginTop="@dimen/dimen_9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_9dp"
                style="@style/HomeworkTitleText"
                android:text="@string/degree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studentAgeView"/>

        <Spinner
                android:id="@+id/degreeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
    </LinearLayout>


    <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BaseButton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>