<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/textArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:weightSum="2">

        <TextView
                android:id="@+id/leftText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="12dp"
                android:textSize="32sp"
                android:text="@string/text_1"
                android:background="@color/background_color_main"/>

        <TextView
                android:id="@+id/rightText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="12dp"
                android:textSize="32sp"
                android:text="@string/text_2"
                android:background="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textArea"
            android:layout_marginTop="30dp"
            android:gravity="center">

        <Button
                android:id="@+id/changeButton"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_button"
                android:textSize="20sp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>