<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".homework.hw3.LoadPictureActivity"
              android:padding="@dimen/dimen_15dp"
              android:background="@color/colorBlack">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/pictureView"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/login_bg"
                    android:scaleType="centerCrop"/>

            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@+id/pictureView"
                    app:layout_constraintBottom_toBottomOf="@+id/pictureView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible"/>

            <EditText
                    android:id="@+id/editTextView"
                    style="@style/EditTextField"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/pictureView"
                    android:hint="@string/enter_uri"/>

            <Button
                    android:id="@+id/uploadButton"
                    style="@style/LoginScreenButton"
                    app:layout_constraintTop_toBottomOf="@+id/editTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:backgroundTint="@color/app_background"
                    android:text="@string/button_upload"
                    android:textColor="@color/colorBlack"/>

            <TextView
                    android:id="@+id/defaultImageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LoginScreenForgotPassword"
                    app:layout_constraintTop_toBottomOf="@+id/uploadButton"
                    android:text="@string/button_upload_default_picture"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</LinearLayout>


